fixed firefox card alignment

--- a/frontend/src/app/pointing/room-cards/room-cards.component.scss
+++ b/frontend/src/app/pointing/room-cards/room-cards.component.scss
@@ -77,7 +77,6 @@
 				grid-column: 1;
 				grid-row: 1;
 				opacity: 0.7;
-				width: 100%;
 				height: 100%;
 			}
 
